--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Vagrant Web Development</title>
+		<title>React</title>
 		<link rel="stylesheet" href="assets/styles/style.css">
 	</head>
 	<body>
