Added require.js support, not working with components yet

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,7 +7,6 @@
 	</head>
 	<body>
 		
-		<script src="assets/scripts/libs.js"></script>
-		<script src="assets/scripts/app.js"></script>
+		<script data-main="assets/scripts/app/app" src="assets/scripts/require.js"></script>
 	</body>
 </html>
